--- a/roles/14_neutronserver/handlers/main.yml
+++ b/roles/14_neutronserver/handlers/main.yml
@@ -1,6 +1,7 @@
 - name: restart neutron-services
   service: name={{ item }} state=restarted
   loop:
-    - neutron-api
+    - neutron-server
+    - nova-api
     #- neutron-metadata-agent
     #- neutron-l3-agent
