--- a/site.yml
+++ b/site.yml
@@ -1,12 +1,6 @@
 ---
 
 
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 01_common
-
 - hosts: all
   become: true
   gather_facts: no
@@ -14,23 +8,23 @@
     - role: 01_common
 
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 02_dbserver
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 03_dbserver_population
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 04_rabbitserver
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 02_dbserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 03_dbserver_population
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 04_rabbitserver
 
 #
 #
@@ -118,11 +112,11 @@
 #  roles:
 #    - role: 16_neutroncompute
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 17_horizon
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 17_horizon
 #
 #- hosts: controller_nodes
 #  become: true
