--- a/site.yml
+++ b/site.yml
@@ -51,12 +51,12 @@
 #  roles:
 #    - role: 06_openstackclient
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 07_keystoneserver
-#     
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 07_keystoneserver
+     
 - hosts: controller_nodes
   become: true
   gather_facts: no
