--- a/site.yml
+++ b/site.yml
@@ -69,34 +69,29 @@
 #  roles: 
 #    - role: 09_glanceserver
 #
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 10_placement
+#
 - hosts: controller_nodes
   become: true
   gather_facts: no
   roles: 
-    - role: 10_placement
+    - role: 11_novaserver
 #
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 11_novaserver
-##
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 12_novacompute
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 13_novadiscover
 
-
-
-
-
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 13_novadiscover
-#
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
