--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -139,26 +139,26 @@
   notify: 
   - restart nova-services
 
-#- name: configure neutron section
-#  ini_file:
-#    path: /etc/nova/nova.conf
-#    section: neutron
-#    option: "{{ item.option }}"
-#    value: "{{ item.value }}"
-#  loop:
-#    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000' }
-#    - { option: "auth_type", value: password }
-#    - { option: "project_domain_name", value: Default}
-#    - { option: "user_domain_name", value: Default}
-#    - { option: "project_name", value: service}
-#    - { option: "username", value: neutron}
-#    - { option: "password", value: "{{ neutron_identity_password }}" }
-#    - { option: "region", value: "{{ region }}" }    
-#    - { option: "region_name", value: "{{ region }}" }
-#    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
-#  notify: 
-#  - restart nova-services
-#
+- name: configure neutron section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: neutron
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "region_name", value: "{{ region }}" }
+    - { option: "project_name", value: service}
+    - { option: "username", value: neutron}
+    - { option: "password", value: "{{ neutron_identity_password }}" }
+    #- { option: "region", value: "{{ region }}" }    
+     - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
+  notify: 
+  - restart nova-services
+
 #- name: configure cinder section
 #  ini_file:
 #    path: /etc/nova/nova.conf
