--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -108,26 +108,26 @@
   notify: 
   - restart nova-compute
 
-#- name: configure neutron section
-#  ini_file:
-#    path: /etc/nova/nova.conf
-#    section: neutron
-#    option: "{{ item.option }}"
-#    value: "{{ item.value }}"
-#  loop:
-#    - { option: "auth_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}:5000' }
-#    - { option: "auth_type", value: password }
-#    - { option: "project_domain_name", value: Default}
-#    - { option: "user_domain_name", value: Default}
-#    - { option: "project_name", value: service}
-#    - { option: "username", value: neutron}
-#    - { option: "password", value: "{{ neutron_identity_password }}" }
-#    - { option: "region", value: "{{ region }}" }
-#    - { option: "region_name", value: "{{ region }}" }
-#    - { option: "service_metadata_proxy", value: 'true' }
-#    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
-#  notify:
-#  - restart nova-compute
+- name: configure neutron section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: neutron
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "auth_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}:5000' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: neutron}
+    - { option: "password", value: "{{ neutron_identity_password }}" }
+    #- { option: "region", value: "{{ region }}" }
+    - { option: "region_name", value: "{{ region }}" }
+    - { option: "service_metadata_proxy", value: 'true' }
+    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
+  notify:
+  - restart nova-compute
 #
 #- name: configure cinder section
 #  ini_file:
