--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -56,7 +56,7 @@
     - { option: "server_listen", value: '0.0.0.0' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
     #- { option: "vncproxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
-    - { option: "vncproxy_base_url", value: "http://{{ hostvars[groups["controller_nodes"][0]]["external_ip"] }}:6082/spice_auto.html" }
+    - { option: "vncproxy_base_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["external_ip"] }}:6082/spice_auto.html' }
 
 
 #- name: configure vnc section 
