--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -1,3 +1,8 @@
+#ram_allocation_ratio = 1.5
+#disk_allocation_ratio = 2.0   
+#cpu_allocation_ratio = 16
+
+
 - name: ensure nova packages are installed
   apt: name={{ item }}
   loop:
