--- a/site.yml
+++ b/site.yml
@@ -74,23 +74,23 @@
 #  gather_facts: no
 #  roles: 
 #    - role: 10_placement
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 11_novaserver
 #
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 11_novaserver
-##
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 13_novadiscover
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 12_novacompute
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 13_novadiscover
 
 - hosts: controller_nodes
   become: true
