--- a/site.yml
+++ b/site.yml
@@ -75,12 +75,12 @@
 #  roles: 
 #    - role: 10_placement
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 11_novaserver
-#
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 11_novaserver
+
 - hosts: compute_nodes
   become: true
   gather_facts: no
