--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -75,36 +75,47 @@
   notify:
   - restart nova-services
 
-- name: configure vnc section 
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: vnc
-    option: "{{ item.option }}"
-    value: "{{ item.value }}"
-  loop:
-    - { option: "enabled", value: "true" }
-    - { option: "server_listen", value: '$my_ip' }
-    - { option: "server_proxyclient_address", value: '$my_ip' }
-    - { option: "vncproxy_base_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["external_ip"] }}:6080/vnc_auto.html' }
-  notify:
-  - restart nova-services
-
-#- name: configure spice section 
+#- name: configure vnc section 
 #  ini_file:
 #    path: /etc/nova/nova.conf
-#    section: spice
+#    section: vnc
 #    option: "{{ item.option }}"
 #    value: "{{ item.value }}"
 #  loop:
 #    - { option: "enabled", value: "true" }
 #    - { option: "server_listen", value: '$my_ip' }
 #    - { option: "server_proxyclient_address", value: '$my_ip' }
-#    - { option: "html5proxy_base_url", value: "https://{{ controller_fqdn }}:6082/spice_auto.html" }
-#    #- { option: "html5proxy_base_url", value: "http://172.22.121.1:6082/spice_auto.html" }
-#    - { option: "html5proxy_host", value: "0.0.0.0" }
-#    - { option: "html5proxy_port", value: "6082" }
+#    - { option: "vncproxy_base_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["external_ip"] }}:6080/vnc_auto.html' }
 #  notify:
 #  - restart nova-services
+#
+
+- name: configure vnc section 
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: vnc
+    option: "enabled"
+    value: "false"
+  notify:
+  - restart nova-services
+
+
+- name: configure spice section 
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: spice
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "enabled", value: "true" }
+    - { option: "server_listen", value: '$my_ip' }
+    - { option: "server_proxyclient_address", value: '$my_ip' }
+    #- { option: "html5proxy_base_url", value: "https://{{ controller_fqdn }}:6082/spice_auto.html" }
+    - { option: "html5proxy_base_url", value: "http://172.22.121.1:6082/spice_auto.html" }
+    - { option: "html5proxy_host", value: "0.0.0.0" }
+    - { option: "html5proxy_port", value: "6082" }
+  notify:
+  - restart nova-services
 
 - name: configure glance section
   ini_file:
