--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -45,44 +45,46 @@
   notify:
   - restart nova-compute
 
-- name: configure vnc section 
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: vnc
-    option: "{{ item.option }}"
-    value: "{{ item.value }}"
-  loop:
-    - { option: "enabled", value: "true" }
-    - { option: "server_listen", value: '0.0.0.0' }
-    - { option: "server_proxyclient_address", value: '$my_ip' }
-    #- { option: "vncproxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
-    - { option: "vncproxy_base_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["external_ip"] }}:6080/vnc_auto.html' }
-    - { option: "keymap", value: "es-es" }
-
 #- name: configure vnc section 
 #  ini_file:
 #    path: /etc/nova/nova.conf
 #    section: vnc
-#    option: "enabled"
-#    value: "false"
-#
-#- name: configure spice section 
-#  ini_file:
-#    path: /etc/nova/nova.conf
-#    section: spice
 #    option: "{{ item.option }}"
 #    value: "{{ item.value }}"
 #  loop:
-#    - { option: "enabled", value: "True" }
+#    - { option: "enabled", value: "true" }
 #    - { option: "server_listen", value: '0.0.0.0' }
 #    - { option: "server_proxyclient_address", value: '$my_ip' }
-#    - { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
-#    #- { option: "html5proxy_base_url", value: "http://172.22.121.1:6082/spice_auto.html" }
-#    - { option: "html5proxy_host", value: "0.0.0.0" }
-#    - { option: "html5proxy_port", value: "6082" }
+#    #- { option: "vncproxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
+#    - { option: "vncproxy_base_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["external_ip"] }}:6080/vnc_auto.html' }
 #    - { option: "keymap", value: "es-es" }
-#  notify:
-#  - restart nova-compute
+
+- name: configure vnc section 
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: vnc
+    option: "enabled"
+    value: "false"
+  notify:
+  - restart nova-compute
+
+- name: configure spice section 
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: spice
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "enabled", value: "True" }
+    - { option: "server_listen", value: '0.0.0.0' }
+    - { option: "server_proxyclient_address", value: '$my_ip' }
+    #- { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
+    - { option: "html5proxy_base_url", value: "http://172.22.121.1:6082/spice_auto.html" }
+    - { option: "html5proxy_host", value: "0.0.0.0" }
+    - { option: "html5proxy_port", value: "6082" }
+    - { option: "keymap", value: "es-es" }
+  notify:
+  - restart nova-compute
 
 - name: configure glance section
   ini_file:
