--- a/site.yml
+++ b/site.yml
@@ -118,17 +118,17 @@
 #  roles:
 #    - role: 17_horizon
 #
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 18_cinderserver
-#
-#- hosts: storage_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 19_cindervolume
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 18_cinderserver
+
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 19_cindervolume
 #
 ##- hosts: controller_nodes
 ##  become: true
