--- a/site.yml
+++ b/site.yml
@@ -1,144 +1,141 @@
 ---
 
 
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 01_common
-#
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 02_dbserver
-#
-- hosts: controller_nodes
+- hosts: all
   become: true
   gather_facts: no
-#  roles:
-#   - role: 03_dbserver_population
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 04_rabbitserver
-#
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 044_chrony
-##
+  roles:
+    - role: 01_common
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 045_etcd
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 05_memcached
-#
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 06_openstackclient
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 07_keystoneserver
-#     
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 08_keystone_population
-#
-#- hosts: storage_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 09_glanceserver
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 10_placement
-
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 11_novaserver
-#
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 13_novadiscover
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 14_neutronserver
-#  
-#
-#- hosts: network_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 15_neutronnetwork
-##
-##
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 16_neutroncompute
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 17_horizon
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 18_cinderserver
-#
-#- hosts: storage_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 19_cindervolume
-#
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 195_cindercompute
-#
 - hosts: controller_nodes
   become: true
   gather_facts: no
   roles:
-    - role: 20_heatserver
+   - role: 02_dbserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 03_dbserver_population
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 04_rabbitserver
+
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: 05_chrony
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 06_etcd
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 07_memcached
+
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: 08_openstackclient
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 09_keystoneserver
+     
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 10_keystone_population
+
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 11_glanceserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 12_placement
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 13_novaserver
+
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 14_novacompute
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 15_novadiscover
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 16_neutronserver
+  
+
+- hosts: network_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 17_neutronnetwork
+
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 18_neutroncompute
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 19_horizon
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 20_cinderserver
+
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 21_cindervolume
+
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 22_cindercompute
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 23_heatserver
 
